--- a/api/pom.xml
+++ b/api/pom.xml
@@ -17,6 +17,13 @@
         <junit.version>4.12</junit.version>
     </properties>
 
+    <repositories>
+        <repository>
+            <id>jitpack.io</id>
+            <url>https://jitpack.io</url>
+        </repository>
+    </repositories>
+
     <dependencies>
         <dependency>
             <groupId>org.jetbrains.kotlin</groupId>
@@ -39,6 +46,21 @@
             <groupId>com.beust</groupId>
             <artifactId>klaxon</artifactId>
             <version>5.4</version>
+        </dependency>
+        <dependency>
+            <groupId>com.github.unq-ui</groupId>
+            <artifactId>2020s2-instagram</artifactId>
+            <version>1.0.0</version>
+        </dependency>
+        <dependency>
+            <groupId>io.javalin</groupId>
+            <artifactId>javalin</artifactId>
+            <version>3.10.1</version>
+        </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-simple</artifactId>
+            <version>1.7.30</version>
         </dependency>
 
     </dependencies>
