--- a/api/pom.xml
+++ b/api/pom.xml
@@ -4,8 +4,8 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.github.unq-ui</groupId>
-    <artifactId>2020s2-instagram</artifactId>
-    <version>1.1.1</version>
+    <artifactId>2020s2-instagram2</artifactId>
+    <version>1.0.0</version>
     <packaging>jar</packaging>
 
     <name>org.unq.ui.instagram</name>
@@ -63,7 +63,7 @@
         <dependency>
             <groupId>com.github.unq-ui</groupId>
             <artifactId>2020s2-instagram</artifactId>
-            <version>1.0.0</version>
+            <version>1.1.1</version>
         </dependency>
         <dependency>
             <groupId>io.javalin</groupId>
