--- a/arena/pom.xml
+++ b/arena/pom.xml
@@ -4,7 +4,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.github.unq-ui</groupId>
-    <artifactId>2020s2-instagram</artifactId>
+    <artifactId>2020s2-instagram2</artifactId>
     <version>1.0.0</version>
     <packaging>jar</packaging>
 
