Fix de funcion Follow + se agregan id's a mappers

--- a/.gitignore
+++ b/.gitignore
@@ -207,3 +207,9 @@ api/target/test-classes/META-INF/api.kotlin_module
 api/2020s2-instagram.iml
 arena/.idea/jarRepositories.xml
 arena/target/classes/META-INF/arena.kotlin_module
+api/2020s2-instagram2.iml
+api/.idea/modules.xml
+api/src/main/kotlin/org/unq/ui/InstagramController.kt
+api/src/main/kotlin/org/unq/ui/UserController.kt
+api/target/classes/META-INF/2020s2-instagram2.kotlin_module
+api/target/test-classes/META-INF/2020s2-instagram2.kotlin_module
